@@ -1,3 +1,13 @@
+1997-12-24  Tim Pierce  <twp@skepsis.com>
+
+	* cgi.scm (init-environment): Make server-software and
+	server-protocol optional.
+
+1997-12-22  Tim Pierce  <twp@skepsis.com>
+
+	* cgi.scm (read-raw-form-data): Add `cgi-' to content-length.
+	(parse-form): Change `url-decode' to `url:decode'.
+
 Mon Oct 20 18:06:10 1997  Jim Blandy  <jimb@totoro.red-bean.com>
 
 	* configure.in: Update version to 1.0b.
